media/bazarr/bazarr-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bazarr
  labels:
    media-ns: authorized
