media/bazarr/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
        media-app: authorized
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: bazarr
        image: linuxserver/bazarr:1.5.6
        ports:
          - name: http
            containerPort: 6767
        volumeMounts:
          - name: bazarr-config
            mountPath: /config
          - name: bazarr-tvshows
            mountPath: /tv
          - name: bazarr-movies
            mountPath: /movies
          - name: bazarr-download
            mountPath: /downloads
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-pvc
        - name: bazarr-tvshows
          persistentVolumeClaim:
            claimName: bazarr-tvshows-pvc
        - name: bazarr-movies
          persistentVolumeClaim:
            claimName: bazarr-movies-pvc
        - name: bazarr-download
          persistentVolumeClaim:
            claimName: bazarr-download-pvc
